[profile.release]
lto = true
panic = 'abort'
[dependencies.lending-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['lending-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'lending-runtime-wasm'
version = '1.0.0'
